# otpcli

./: Cargo.toml
src/: config.rs  lib.rs  totp.rs
src/otpcli/: main.rs
