[package]
name = "otpcli-tkennedy1"
version = "1.0.1"
authors = ["Jake Swenson <jake@jakeswenson.com>", "Todd Kennedy <tkennedy1@godaddy.com>"]
description = "A simple one-time-password CLI, with support for TOTP and STOKEN."
license = "MIT"
edition = "2021"
repository = "https://github.com/tkennedy1-godaddy/otpcli/"
readme = "README.md"

[lib]
name = "otp"
path = "src/lib.rs"

[[bin]]
name = "otpcli"
path = "src/otpcli/main.rs"

[features]
default = ["keychain", "copy"]
keychain = ["keyring"]
copy = ["clipboard"]
rsa_stoken = ["stoken"]

[dependencies]
rust-crypto = "^0"
byteorder = "^1.4"
base32 = "^0.5"
toml = "^0"
serde = { version = "^1.0", features = ["derive"] }
structopt = "^0"
dirs = "^4.0"
stoken = { version = "^0", optional = true }
keyring = { version = "^0", optional = true }
clipboard = { version = "^0", optional = true }

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1

[package.metadata.docs.rs]
no-default-features = true # copy support doesn't work
features = ["keychain"]
